--- a/BWKbot.html
+++ b/BWKbot.html
@@ -18,7 +18,9 @@
   <span class='question1'></span>
 </div>
 </div>
+<div class="container col-md-10 col-md-offset-1">
 <p class='lead'>Back to <a href="https://leahw.github.io/"> leahw.github.io </a></p>
+</div>
 <body>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
