--- a/BWKbot.html
+++ b/BWKbot.html
@@ -40,9 +40,11 @@ function Question(ques) {
   
    $('.ab1n').on('click', function() {
     $('.question1').append("Nope, it's not raining!   ");
+    $('.ably').remove();
   });
   $('.ab1y').on('click', function() {
     $('.question1').append("Yes, it is raining!   ");
+    $('.abln').remove();
   });
   
   });
