--- a/BWKbot.html
+++ b/BWKbot.html
@@ -44,11 +44,11 @@ function Question(ques) {
   
    $('.ab1n').on('click', function() {
     $('.question1').append("Nope, it's not raining!   ");
-    $('.ably').addClass('hide');
+    $(this).addClass('hide');
   });
   $('.ab1y').on('click', function() {
     $('.question1').append("Yes, it is raining!   ");
-    $('.abln').addClass('hide');
+    $(this).addClass('hide');
   });
   
   });
