--- a/BWKbot.html
+++ b/BWKbot.html
@@ -43,11 +43,11 @@ function Question(ques) {
   Num1.ask(); 
   
    $('.ab1n').on('click', function() {
-    $('.question1').append("Nope, it's not raining!   ");
+    $('.question1').append("Nope, it's not raining! <br>");
     $('.q1a').addClass('hide');
   });
   $('.ab1y').on('click', function() {
-    $('.question1').append("Yes, it is raining!   ");
+    $('.question1').append("Yes, it is raining! <br>");
     $('.q1a').addClass('hide');
   });
   
