--- a/JSandbox.html
+++ b/JSandbox.html
@@ -92,7 +92,7 @@ width: 509px;
 <br>
 
 <div class="container well col-md-8 col-md-offset-2">
-<br>
+<div class="col-md-8 col-md-offset-2 whitespace"></div>
   <span class='question1'></span>
 </div>
 </div>
