--- a/JSandbox.html
+++ b/JSandbox.html
@@ -87,8 +87,9 @@ width: 509px;
   </div>
   <br>
   <div class="container well col-md-8 col-md-offset-2">
-  <br>
+  <div class="row col-md-8 col-md-offset-2">
 <button class='qb1'> Let's talk about the weather </button>
+</div>
 <div class="col-md-8 col-md-offset-2 whitespace"></div>
 <br>
 
