--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <head>
  <meta charset="UTF-8">
- <meta name="description" content="Self taught computer programmer applying code bootcamp lessons and web tutorials within a sandbox personal GitHub page">
+ <meta name="description" content="Self taught computer programmer applying code bootcamp lessons and web tutorials on a GitHub page">
  <meta name="keywords" content="code bootcamp, coding tutorials, Regex, Regular Expressions, HTML, CSS, JavaScript, jQuery, Bootstrap, GitHub">
  <meta name="author" content="Leah Williamson">
   <title>LeahW on GitHub: Setting Code Bootcamp Lessons Loose in the Wild </title>
