--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </head>
   
   <body>
-  <div class="navbar navbar-default">
+  <div class="navbar navbar-default navbar-static-top">
   <div class="container">
-  <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a></p>
+  <a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a>
   </div>
   </div>
   <div class="container col-md-6 col-md-offset-1">
