--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   
   <body>
-  <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-default navbar-default-top">
   <div class="container">
   <a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a>
   </div>
