--- a/JSandbox.html
+++ b/JSandbox.html
@@ -57,7 +57,7 @@ width: 509px;
       height: 127px;
       width: 509px;
 }
-.btn-msg {
+.btn-revstring {
      background: #f00ff0;
 }
  .hide {
@@ -76,8 +76,8 @@ width: 509px;
  
  </div>
  <br>
-  <div class="container well col-md-6 col-md-offset-3"><button class="btn-msg"> Personalized Greeting </button>
-       <span class="message">: </span>
+  <div class="container well col-md-6 col-md-offset-3"><button class="btn-revstring"> Reverse a String! </button>
+       <span class="revstring">: </span>
   </div>
   
   <div class="container well col-md-6 col-md-offset-3">
@@ -105,15 +105,15 @@ width: 509px;
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
-   
-$('.btn-msg').on('click', function(name) {
-      $('.btn-msg').removeClass('btn-msg');
+function reverse(aString) {
+      return (aString).split("").reverse().join("");
+}   
+$('.btn-revstring').on('click', function(name) {
+      $(this).removeClass('btn-revstring')
       $(this).addClass('colorChange');
-      
-var name = prompt("What is your name?");
-
-  $('.message').append('Hello, '+name+', thanks for visiting my page! ');
-    
+      var hardCodedString = 'This is a hard-coded string';
+     $('.revstring').append(reverse('This is a string'));
+}
  });
  
  $('.rando-but').on('click', function() {
