--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta name="description" content="Self taught computer programmer applying code bootcamp lessons and web tutorials on a GitHub page">
  <meta name="keywords" content="code bootcamp, coding tutorials, Regex, Regular Expressions, HTML, CSS, JavaScript, jQuery, Bootstrap, GitHub">
  <meta name="author" content="Leah Williamson">
+ <meta name="viewport" content="width=device-width">
   <title>LeahW on GitHub: Setting Code Bootcamp Lessons Loose in the Wild </title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <style>
@@ -16,7 +17,9 @@
     .emptyrow {
      margin: 10px 40px;
     }
-  
+    @-ms-viewport {
+     width: device-width;
+    }
   </style>
   </head>
   
