--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
  <head>
  <meta charset="UTF-8">
  <meta name="description" content="Self taught computer programmer applying code bootcamp lessons and web tutorials on a GitHub page">
@@ -82,3 +83,4 @@
 
   </script>
   </body>
+  </html>
