--- a/JSandbox.html
+++ b/JSandbox.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8">
+<meta name="description" content="A page to try out JavaScript tutorial exercises and JavaScript challenges.">
+<meta name="author" content="Leah Williamson">
 <head>
 <title>JS.andbox</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -194,3 +199,4 @@ function Question(ques) {
 </script>
 
 </body>
+</html>
