--- a/JSandbox.html
+++ b/JSandbox.html
@@ -82,7 +82,7 @@ width: 509px;
        <span class="revstring">: </span>
        <br>
        <button class="btn-factorial"> Factorial of a Number! </button>
-       span class="facstring">: </span>
+       <span class="facstring">: </span>
   </div>
   
   <div class="container well col-md-6 col-md-offset-3">
