--- a/JSandbox.html
+++ b/JSandbox.html
@@ -122,8 +122,8 @@ $('.btn-revstring').on('click', function() {
  function factorial(num) {
        if (num === 0) {
              return 1;
-       };
-             return  n * factorial(num-1);
+       } else {
+             return  num * factorial(num-1);
        };
  };
  
