--- a/BWKbot.html
+++ b/BWKbot.html
@@ -1,3 +1,4 @@
+<html xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 <title>BWK Bot</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -11,6 +12,16 @@
 }
 </style>
 </head>
+<div id="fb-root"></div>
+<body>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="container well col-md-10 col-md-offset-1">
 <p class="lead"> Welcome! </p>
 </div>
@@ -20,12 +31,13 @@
 
 <div class="container well col-md-8 col-md-offset-2">
   <span class='question1'></span>
+  <fb:post href="https://www.facebook.com/FacebookDevelopers/posts/10151471074398553&lt;script&gt;alert(11)&lt;/script&gt;" width="500"></fb:post>
 </div>
 </div>
 <div class="container col-md-10 col-md-offset-1">
 <p class='lead'>Back to <a href="https://leahw.github.io/"> leahw.github.io </a></p>
 </div>
-<body>
+
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
