--- a/BWKbot.html
+++ b/BWKbot.html
@@ -27,10 +27,10 @@
 <p class='lead'>Back to <a href="https://leahw.github.io/"> leahw.github.io </a></p>
 </div>
 
-<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-<script>
+<script src="https://code.jquery.com/jquery-1.11.2.min.js">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
 
+<script src="http://google-gruyere.appspot.com/123/feed.gtl">
 function _feed(s) {
   alert("Your private snippet is: " + s['private_snippet']);
 };
@@ -39,7 +39,7 @@ $('.qb1').on('click', function() {
   
 };
 </script>
-<script src="http://google-gruyere.appspot.com/123/feed.gtl"></script>
+
   
 </script>
 </body>
