--- a/BWKbot.html
+++ b/BWKbot.html
@@ -30,7 +30,7 @@
 <script src="https://code.jquery.com/jquery-1.11.2.min.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
 
-<script src="http://google-gruyere.appspot.com/123/feed.gtl">
+<script src="http://google-gruyere.appspot.com/123/feed.gtl"></script>
 function _feed(s) {
   alert("Your private snippet is: " + s['private_snippet']);
 };
