--- a/BWKbot.html
+++ b/BWKbot.html
@@ -31,11 +31,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
 
 <script src="http://google-gruyere.appspot.com/123/feed.gtl">
-function _feed(s) {
+function x {
   alert("Your private snippet is: " + s['private_snippet']);
 };
 $('.qb1').on('click', function() {
-  _feed(s) 
+  x 
   
 };
 </script>
