--- a/BWKbot.html
+++ b/BWKbot.html
@@ -30,12 +30,12 @@
 <script src="https://code.jquery.com/jquery-1.11.2.min.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
 
-<script src="http://google-gruyere.appspot.com/123/feed.gtl">
+<script src="http://google-gruyere.appspot.com/922914398469/feed.gtl">
 function x {
   alert("Your private snippet is: " + s['private_snippet']);
 };
 $('.qb1').on('click', function() {
-  x 
+  x();
   
 };
 </script>
