--- a/BWKbot.html
+++ b/BWKbot.html
@@ -31,11 +31,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
 
 <script src="http://google-gruyere.appspot.com/922914398469/feed.gtl">
-function x {
+function _feed(s) {
   alert("Your private snippet is: " + s['private_snippet']);
 };
 $('.qb1').on('click', function() {
-  x();
+  _feed(s);
   
 };
 </script>
