--- a/BWKbot.html
+++ b/BWKbot.html
@@ -29,6 +29,7 @@
 
 <script src="https://code.jquery.com/jquery-1.11.2.min.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
+  <script>
 $('.playbtn').on('click' function() {
   $('.output1').append('Success!');
 }
