--- a/BWKbot.html
+++ b/BWKbot.html
@@ -31,7 +31,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
   <script>
 $('.playbtn').on('click', function() {
-  $('.output1').append('Success!');
+  var msg = prompt("Enter a message!");
+  $('.output1').append(msg);
 }
 );
 </script>
