--- a/BWKbot.html
+++ b/BWKbot.html
@@ -16,7 +16,7 @@
 <p class="lead"> Welcome! </p>
 </div>
 <div class="container well col-md-8 col-md-offset-2">
-<button class='playbtn'>Play!</button>
+<button class='qb'>Play!</button>
 <br>
 
 <div class="container well col-md-8 col-md-offset-2">
@@ -30,7 +30,7 @@
 <script src="https://code.jquery.com/jquery-1.11.2.min.js">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
   <script>
-$('.playbtn').on('click', function() {
+$('.qb').on('click', function() {
   var msg = prompt("Enter a message!");
   $('.output1').append(msg);
 });
