--- a/BWKbot.html
+++ b/BWKbot.html
@@ -27,8 +27,8 @@
 <p class='lead'>Back to <a href="https://leahw.github.io/"> leahw.github.io </a></p>
 </div>
 
-<script src="https://code.jquery.com/jquery-1.11.2.min.js">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js">
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
 $('.qb1').on('click', function() {
 function Question(ques) {
