--- a/BWKbot.html
+++ b/BWKbot.html
@@ -31,7 +31,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   $('.qb1').on('click', function() {
-    $('.qb1').append("Success!");
+    $('output1').append("Success!");
   });
 </script>
 
