--- a/BWKbot.html
+++ b/BWKbot.html
@@ -31,10 +31,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   $('.qb1').on('click', function() {
-    var nums = new Array[];
+    var nums = [];
     for (i=0;i<=20;i++) {
-     nums.append(i); 
-    }
+     nums=nums+=i; 
+    };
     $('.output1').append(nums);
   });
 </script>
