--- a/BWKbot.html
+++ b/BWKbot.html
@@ -33,7 +33,7 @@
   $('.qb1').on('click', function() {
     var nums = [];
     for (i=0;i<=20;i++) {
-     nums=nums+=i; 
+     nums=nums+=(i+' '); 
     };
     $('.output1').append(nums);
   });
