--- a/BWKbot.html
+++ b/BWKbot.html
@@ -33,6 +33,9 @@
   $('.qb1').on('click', function() {
     var nums = [];
     for (i=0;i<=20;i++) {
+      if (i===3) {
+        i='Fizz';
+      };
      nums=nums+=(i+' '); 
     };
     $('.output1').append(nums);
