--- a/BWKbot.html
+++ b/BWKbot.html
@@ -34,11 +34,13 @@
     var nums = [];
     for (i=0;i<=20;i++) {
       if (i===3) {
-        nums=nums+=('Fizz ')
+        nums=nums+=('Fizz')
       } else if (i===7) {
-        nums=nums+=('Buzz ')
+        nums=nums+=('Buzz')
+      } else if (i!==3 && i!==7) {
+        nums=nums+=i
       };
-     nums=nums+=(i+' ') 
+     nums=nums+=(' ') 
     };
     $('.output1').append(nums);
   });
