--- a/BWKbot.html
+++ b/BWKbot.html
@@ -35,7 +35,7 @@
     for (i=1;i<=20;i++) {
       if (i===3 || (i%3)===0) {
         nums=nums+=('Fizz')
-      } else if (i===7) {
+      } else if (i===7 || (i%7)===0) {
         nums=nums+=('Buzz')
       } else if (i!==3 && i!==7) {
         nums=nums+=i
