--- a/BWKbot.html
+++ b/BWKbot.html
@@ -36,7 +36,7 @@
       if ((i%3)===0 && (i%7)===0) {
         nums=nums+=('FizzBuzz')
       }
-      else if (i===3 || (i%3)===0) {
+      else if (i===/3/ || (i%3)===0) {
         nums=nums+=('Fizz')
       } else if (i===7 || (i%7)===0) {
         nums=nums+=('Buzz')
