--- a/BWKbot.html
+++ b/BWKbot.html
@@ -32,11 +32,11 @@
   <script>
   $('.qb1').on('click', function() {
     var nums = [];
-    for (i=1;i<=30;i++) {
+      for (i=1;i<=30;i++) {
       if ((i%3)===0 && (i%7)===0) {
         nums=nums+=('FizzBuzz')
       }
-      else if (i===/3/ || (i%3)===0) {
+      else if (/3/.test(i)===true || (i%3)===0) {
         nums=nums+=('Fizz')
       } else if (i===7 || (i%7)===0) {
         nums=nums+=('Buzz')
