--- a/BWKbot.html
+++ b/BWKbot.html
@@ -38,7 +38,7 @@
       }
       else if (/3/.test(i)===true || (i%3)===0) {
         nums=nums+=('Fizz')
-      } else if (i===7 || (i%7)===0) {
+      } else if (/7/.test(i)===true || (i%7)===0) {
         nums=nums+=('Buzz')
       } else if (i!==3 && i!==7) {
         nums=nums+=i
