--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
  <br>
- <p> A page to test regular expressions.</p>
+ <p> Coding challenges that use regular expressions.</p>
   </div>
     <div class="row col-md-12 whitespace"></div>
   
