--- a/BWKbot.html
+++ b/BWKbot.html
@@ -9,6 +9,10 @@
   height: 1px;
   width: 1px;
 }
+.board {
+  background: blue;
+  font: white;
+}
 </style>
 </head>
 <body>
@@ -16,6 +20,9 @@
 <p class="lead"> Welcome! </p>
 </div>
 <div class="container well col-md-8 col-md-offset-2">
+<div class="container col-md-6 col-md-offset-3 board">
+  The Board.
+</div>
 <button class='qb1'>Play!</button>
 <br>
 
