--- a/BWKbot.html
+++ b/BWKbot.html
@@ -11,7 +11,7 @@
 }
 .board {
   background: blue;
-  font-color: white;
+  color: white;
 }
 </style>
 </head>
@@ -23,7 +23,9 @@
 <div class="container col-md-6 col-md-offset-3 board">
   The Board.
 </div>
+<div class="row col-md-8 col-md-offset-2">
 <button class='qb1'>Play!</button>
+</div>
 <br>
 
 <div class="container well col-md-8 col-md-offset-2">
