--- a/BWKbot.html
+++ b/BWKbot.html
@@ -10,8 +10,11 @@
   width: 1px;
 }
 .board {
-  background: blue;
-  color: white;
+  background: #004747;
+  color: #FFFFF5;
+}
+.block {
+  background: #004200;
 }
 </style>
 </head>
@@ -21,10 +24,13 @@
 </div>
 <div class="container well col-md-8 col-md-offset-2">
 <div class="container col-md-6 col-md-offset-3 board">
+<div class="container col-md-1 block A1"></div>
   The Board.
 </div>
 <div class="row col-md-8 col-md-offset-2">
 <button class='qb1'>Play!</button>
+</div>
+<div class="row col-md-8 col-md-offset-2">
 </div>
 <br>
 
