--- a/BWKbot.html
+++ b/BWKbot.html
@@ -10,7 +10,7 @@
   width: 1px;
 }
 .board {
-  background: #004747;
+  background: #145E5E;
   color: #FFFFF5;
 }
 .block {
@@ -24,7 +24,7 @@
 </div>
 <div class="container well col-md-8 col-md-offset-2">
 <div class="container col-md-6 col-md-offset-3 board">
-<div class="container col-md-1 block A1"></div>
+<div class="container col-md-1 block A1">A1</div>
   The Board.
 </div>
 <div class="row col-md-8 col-md-offset-2">
