--- a/BWKbot.html
+++ b/BWKbot.html
@@ -15,6 +15,7 @@
 }
 .block {
   background: #004200;
+  color: #EDEDA3;
 }
 </style>
 </head>
@@ -25,6 +26,11 @@
 <div class="container well col-md-8 col-md-offset-2">
 <div class="container col-md-6 col-md-offset-3 board">
 <div class="container col-md-1 block A1">A1</div>
+<div class="container col-md-1 block A2">A2</div>
+<div class="container col-md-1 block A3">A3</div>
+<div class="container col-md-1 block A4">A4</div>
+<div class="container col-md-1 block A5">A5</div>
+<div class="container col-md-1 block A6">A6</div>
   The Board.
 </div>
 <div class="row col-md-8 col-md-offset-2">
