--- a/BWKbot.html
+++ b/BWKbot.html
@@ -25,12 +25,28 @@
 </div>
 <div class="container well col-md-8 col-md-offset-2">
 <div class="container col-md-6 col-md-offset-3 board">
+
 <div class="container col-md-2 block A1">A1</div>
 <div class="container col-md-2 block A2">A2</div>
 <div class="container col-md-2 block A3">A3</div>
 <div class="container col-md-2 block A4">A4</div>
 <div class="container col-md-2 block A5">A5</div>
 <div class="container col-md-2 block A6">A6</div>
+
+<div class="container col-md-2 block B1">B1</div>
+<div class="container col-md-2 block B2">B2</div>
+<div class="container col-md-2 block B3">B3</div>
+<div class="container col-md-2 block B4">B4</div>
+<div class="container col-md-2 block B5">B5</div>
+<div class="container col-md-2 block B6">B6</div>
+
+<div class="container col-md-2 block C1">C1</div>
+<div class="container col-md-2 block C2">C2</div>
+<div class="container col-md-2 block C3">C3</div>
+<div class="container col-md-2 block C4">C4</div>
+<div class="container col-md-2 block C5">C5</div>
+<div class="container col-md-2 block C6">C6</div>
+
   The Board.
 </div>
 <div class="row col-md-8 col-md-offset-2">
