--- a/BWKbot.html
+++ b/BWKbot.html
@@ -75,7 +75,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   function makeClass(block) {
-      block = block + '"';
+    prefix = "\'.";
+    prefix = prefix + block;
+    return prefix;
   };
   $('.qb1').on('click', function() {
     var chosenBlock = prompt("Please enter an alphanumeric block coordinate:");
