--- a/BWKbot.html
+++ b/BWKbot.html
@@ -75,7 +75,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   function makeClass(block) {
-    prefix = "abc";
+    prefix = "\'.";
     prefix = prefix + block;
     return prefix;
   };
