--- a/BWKbot.html
+++ b/BWKbot.html
@@ -75,6 +75,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
   function makeClass(block) {
+    suffix = "\'";
+    block = block + suffix;
     prefix = "\'.";
     prefix = prefix + block;
     return prefix;
