--- a/BWKbot.html
+++ b/BWKbot.html
@@ -85,6 +85,7 @@
     var chosenBlock = prompt("Please enter an alphanumeric block coordinate:");
     var chosenClass = makeClass(chosenBlock); 
         $('.output1').append(chosenClass);
+        $(chosenClass).addClass('.alive');
   });
    
 </script>
