--- a/BWKbot.html
+++ b/BWKbot.html
@@ -81,7 +81,7 @@
       this.ques = ques;
       this.ask = function(ques) {
         $('.output1').append(ques + "      ");
-        $('.output1').append("<span class="rowSpan"><button class="rowBtn"> A </button></span>");
+        $('.output1').append("<span class='rowSpan'><button class='rowBtn'> A </button></span>");
       };
     };
       choose("Pick a row!");
