--- a/BWKbot.html
+++ b/BWKbot.html
@@ -81,7 +81,7 @@
       this.ques = ques;
       this.ask = function() {
         $('.output1').append(ques + "      ");
-        $('.output1').append("<span class='rowSpan'><button class='rowBtnA'> A </button>  <button class='rowBtnB'> B </button></span>");
+        $('.output1').append("<span class='rowSpan'><button class='rowBtnA'> A </button>  <button class='rowBtnB'> B </button>  <button class='rowBtnC'> C </button></span>");
         };
 };
     var rowQuestion = new Choose("Pick a row:");
