--- a/BWKbot.html
+++ b/BWKbot.html
@@ -84,8 +84,8 @@
     function Choose(ques) {
       this.ques = ques;
       this.ask = function() {
-        $('.output1').append("<span class='rowSpan'>" + ques + "      ");
-        $('.output1').append("<button class='rowBtnA'> A </button>  <button class='rowBtnB'> B </button>  <button class='rowBtnC'> C </button></span>");
+        $('.output1').append("<span class='rowSpan'>" + ques + "</span>      ");
+        $('.output1').append("<span class='rowSpan'><button class='rowBtnA'> A </button>  <button class='rowBtnB'> B </button>  <button class='rowBtnC'> C </button></span>");
         };
 };
     var rowQuestion = new Choose("Pick a row:");
