--- a/BWKbot.html
+++ b/BWKbot.html
@@ -96,7 +96,7 @@
       function Select(ques1) {
         this.ques1 = ques1;
         this.ask = function() {
-          $('.output1').append("<span class='colSpan'>" + ques1 + </span>      ");
+          $('.output1').append("<span class='colSpan'>" + ques1 + "</span>      ");
           $('.output1').append("<span class='colSpan'><button class='colBtn1'> 1 </button>  <button class='colBtn2'> 2 </button>   <button class='colBtn3'> 3 </button>   <button class='colBtn4'> 4 </button>   <button class='colBtn5'> 5 </button>   <button class='colBtn6'> 6 </button></span>")
  ;         };
         };
