--- a/BWKbot.html
+++ b/BWKbot.html
@@ -106,6 +106,26 @@
           $('.colSpan').addClass('hide');
           $('.A1').toggleClass('alive');
         });
+        $('.colBtn2').on('click', function() {
+          $('.colSpan').addClass('hide');
+          $('.A2').toggleClass('alive');
+        });
+        $('.colBtn3').on('click', function() {
+          $('.colSpan').addClass('hide');
+          $('.A3').toggleClass('alive');
+        });
+        $('.colBtn4').on('click', function() {
+          $('.colSpan').addClass('hide');
+          $('.A4').toggleClass('alive');
+        });
+        $('.colBtn5').on('click', function() {
+          $('.colSpan').addClass('hide');
+          $('.A5').toggleClass('alive');
+        });
+        $('.colBtn6').on('click', function() {
+          $('.colSpan').addClass('hide');
+          $('.A6').toggleClass('alive');
+        });
       });
       
     $('.rowBtnB').on('click', function () {
